--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel Austria",
   "license": "ISC",
   "devDependencies": {
+    "concat": "^1.0.3",
     "node-sass": "^9.0.0"
   },
   "dependencies": {
